# pyconkr_2019

./: .gitignore  requirements.txt  setup.cfg  setup.py
tutorial/: shell.py
tutorial/cmd/sub1/: cmd1.py
tutorial/cmd/sub2/: cmd1.py  cmd2.py
tutorial/cmd/web/: __init__.py  api.py
tutorial/common/: commandmanager.py  module.py
