[metadata]
name = tutorial
summary = tutorial cli
version = 0.0.1

[files]
packages = tutorial

[entry_points]
console_scripts =
    tutorial_cli = tutorial.shell:main

tutorial.cli =
    command_list = tutorial.common.module:ListCommand
    serve = tutorial.cmd.web.api:RestAPIServe
tutorial.cli.sub1 =
    sub1_cmd1 = tutorial.cmd.sub1.cmd1:TutorialSub1Command1
tutorial.cli.sub2 =
    sub2_cmd1 = tutorial.cmd.sub2.cmd1:TutorialSub2Command1
    sub2_cmd2 = tutorial.cmd.sub2.cmd2:TutorialSub2Command2
